@@ -1,3 +1,8 @@
+Fri Aug 21 06:47:58 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/colour.py: import xapian-dependent stuff lazily, to make it
+	  easier to use this module standalone.
+
 Fri Aug 21 06:44:53 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* README: Note that scipy 0.7 or later is needed.
